# mk4sdk

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerConfig.cmake  FindAlter3D.cmake  FindMK4Strip.cmake
docs/: combos.txt
include/mk4sdk/: decl.h  dom.h  types.h
include/transp/: bmp.h
src/injection/: main.cpp
src/mk4tr/: CMakeLists.txt  README.md  about.json  gameplay.json  installer.nsi  text.json
src/mk4tr/assets/noob/alt/: Noob_Diff.tga  noob_alt.blend
src/mk4tr/assets/noob/primary/: Noob_DetailA.tga  Noob_DetailB.tga  Noob_Diff.tga  Noob_Mask.tga  Noob_Spec.tga  noob_primary.blend
src/mk4tr/reg/: installx86.reg
src/nsis/: base_script.nsh
src/transp/: TRANSP.PAS  bmp.cpp  main.cpp
src/win_installer/reg/: installunlockedx64.reg  installunlockedx86.reg  installx64.reg
tools/: BEGIN.BAT  COMPILE.BAT  CONTINUE.BAT  GEO-ALL.BAT  GFX-ALL.BAT  README.md
tools/RAW/: GEO2OBJ.BAT  GFX2BMP.BAT
tools/VIEW/: BMP2GFX.BAT
tools/alter3d/: DEF.HRA  README.md
utils/: README.md  ase2geo  ase2geo.bat  bmp2gfx  bmp2gfx.bat  compile  compile.bat  decompile  decompile.bat  geo2rax  geo2rax-all  geo2rax-all.bat  geo2rax.bat  gfx2bmp  gfx2bmp-all  gfx2bmp-all.bat  gfx2bmp.bat  raw2view-all  raw2view-all.bat
utils/wav/: mk4.m3u
